--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
          <nav>
             <a href="/home">Home</a>
             <a href="/about">About</a>
+            <a href="/projects">Projects</a>
          </nav>
       </div>
    </header>
@@ -28,6 +29,78 @@
             <h1>I am <span style="color:#6C63FF">Portfolio</span>.</h1>
          </div>
          <img height="300px" src="/profile.svg" alt="">
+      </div>
+   </section>
+   <section id="about">
+      <div class="container">
+         <h2>About me</h2>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque atque, veritatis aliquam rem voluptates
+            possimus voluptatum ad beatae deleniti libero, excepturi odit necessitatibus exercitationem ratione nihil
+            doloremque nam dolor assumenda explicabo hic quisquam fuga sint unde et! Optio, modi tempora.</p>
+      </div>
+   </section>
+   <section id="projects">
+      <div class="container">
+         <h1>Projects</h1>
+         <hr>
+         <div id="project-grid">
+
+            <div class="card">
+               <h3>Project Name</h3>
+               <p>
+                  <small>
+                     <i>12-11-2021 </i>
+                     | HTML, CSS, JS</small>
+               </p>
+               <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
+               </p>
+            </div>
+            <div class="card">
+               <h3>Project Name</h3>
+               <p>
+                  <small>
+                     <i>12-11-2021 </i>
+                     | HTML, CSS, JS</small>
+               </p>
+               <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
+               </p>
+            </div>
+            <div class="card">
+               <h3>Project Name</h3>
+               <p>
+                  <small>
+                     <i>12-11-2021 </i>
+                     | HTML, CSS, JS</small>
+               </p>
+               <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
+               </p>
+            </div>
+            <div class="card">
+               <h3>Project Name</h3>
+               <p>
+                  <small>
+                     <i>12-11-2021 </i>
+                     | HTML, CSS, JS</small>
+               </p>
+               <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
+               </p>
+            </div>
+            <div class="card">
+               <h3>Project Name</h3>
+               <p>
+                  <small>
+                     <i>12-11-2021 </i>
+                     | HTML, CSS, JS</small>
+               </p>
+               <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
+               </p>
+            </div>
+         </div>
       </div>
    </section>
 </body>
