--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             Portfolio Pandey
          </h4>
          <nav>
-            <a href="/home">Home</a>
-            <a href="/about">About</a>
-            <a href="/projects">Projects</a>
+            <a href="#hero">Home</a>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
          </nav>
       </div>
    </header>
