footer added and projects sections updated

--- a/index.html
+++ b/index.html
@@ -2,107 +2,181 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="index.css">
-   <title>Portfolio Website</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Portfolio Website</title>
 </head>
 
 <body>
-   <header>
-      <div class="container">
-         <h4>
-            Portfolio Pandey
-         </h4>
-         <nav>
-            <a href="#hero">Home</a>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-         </nav>
-      </div>
-   </header>
-   <section id='hero'>
-      <div class="container">
-         <div>
-            <h2>Hello there!</h2>
-            <h1>I am <span style="color:#6C63FF">Portfolio</span>.</h1>
-         </div>
-         <img height="300px" src="/profile.svg" alt="">
-      </div>
-   </section>
-   <section id="about">
-      <div class="container">
-         <h2>About me</h2>
-         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque atque, veritatis aliquam rem voluptates
-            possimus voluptatum ad beatae deleniti libero, excepturi odit necessitatibus exercitationem ratione nihil
-            doloremque nam dolor assumenda explicabo hic quisquam fuga sint unde et! Optio, modi tempora.</p>
-      </div>
-   </section>
-   <section id="projects">
-      <div class="container">
-         <h1>Projects</h1>
-         <hr>
-         <div id="project-grid">
 
-            <div class="card">
-               <h3>Project Name</h3>
-               <p>
-                  <small>
-                     <i>12-11-2021 </i>
-                     | HTML, CSS, JS</small>
-               </p>
-               <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
-               </p>
+    <header>
+        <div class="container">
+            <h4>
+                Portfolio Pandey
+            </h4>
+            <nav>
+                <a href="#hero">Home</a>
+                <a href="#about">About</a>
+                <a href="#projects">Projects</a>
+            </nav>
+        </div>
+    </header>
+
+    <section id='hero'>
+        <div class="container">
+            <div>
+                <h2>Hello there!</h2>
+                <h1>I am <span style="color:#6C63FF">Portfolio</span>.</h1>
             </div>
-            <div class="card">
-               <h3>Project Name</h3>
-               <p>
-                  <small>
-                     <i>12-11-2021 </i>
-                     | HTML, CSS, JS</small>
-               </p>
-               <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
-               </p>
+            <img height="300px" src="/profile.svg" alt="">
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="container">
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque atque, veritatis aliquam rem voluptates
+                possimus voluptatum ad beatae deleniti libero, excepturi odit necessitatibus exercitationem ratione
+                nihil
+                doloremque nam dolor assumenda explicabo hic quisquam fuga sint unde et! Optio, modi tempora.</p>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <h1>Projects</h1>
+            <hr>
+            <div id="project-grid">
+
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1553272725-086100aecf5e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80"
+                        alt="">
+                    <h2>Project Name</h2>
+                    <p>
+                        <small>
+                            <i>12-11-2021 </i>
+                            | HTML, CSS, JS</small>
+                    </p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum
+                    </p>
+                </div>
+
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1627421367074-0735f6ddc254?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=676&q=80"
+                        alt="">
+                    <h3>Project Name</h3>
+                    <p>
+                        <small>
+                            <i>12-11-2021 </i>
+                            | HTML, CSS, JS</small>
+                    </p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum
+                    </p>
+                </div>
+
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1627631498315-3116f6484188?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                        alt="">
+                    <h3>Project Name</h3>
+                    <p>
+                        <small>
+                            <i>12-11-2021 </i>
+                            | HTML, CSS, JS</small>
+                    </p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum
+                    </p>
+                </div>
+
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1627590660763-d612beeb85ec?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                        alt="">
+                    <h3>Project Name</h3>
+                    <p>
+                        <small>
+                            <i>12-11-2021 </i>
+                            | HTML, CSS, JS</small>
+                    </p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum
+                    </p>
+                </div>
+
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1627623725066-b9e645f88d69?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                        alt="">
+                    <h3>Project Name</h3>
+                    <p>
+                        <small>
+                            <i>12-11-2021 </i>
+                            | HTML, CSS, JS</small>
+                    </p>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum
+                    </p>
+                </div>
             </div>
-            <div class="card">
-               <h3>Project Name</h3>
-               <p>
-                  <small>
-                     <i>12-11-2021 </i>
-                     | HTML, CSS, JS</small>
-               </p>
-               <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
-               </p>
+        </div>
+    </section>
+
+    <footer>
+        <div id="footer" class="container">
+
+            <div class="about-me">
+                <h2 class="heading">
+                    About me
+                </h2>
+                <h4 class="content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum
+                </h4>
             </div>
-            <div class="card">
-               <h3>Project Name</h3>
-               <p>
-                  <small>
-                     <i>12-11-2021 </i>
-                     | HTML, CSS, JS</small>
-               </p>
-               <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
-               </p>
+
+            <div class="quick-links">
+                <h2 class="heading">
+                    Quick links
+                </h2>
+                <h4 class="content nav-links">
+                    <a href="#hero">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#projects">Projects</a>
+                </h4>
             </div>
-            <div class="card">
-               <h3>Project Name</h3>
-               <p>
-                  <small>
-                     <i>12-11-2021 </i>
-                     | HTML, CSS, JS</small>
-               </p>
-               <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate?
-               </p>
+
+            <div class="contact-me">
+                <h2 class="heading">
+                    Contact me
+                </h2>
+                <h4 class="content contact-links">
+                    <a href="https://wa.me/91YOUR-NUMBER" target="_blank">
+                        <img src="./logos/whatsapp.svg" alt="whatsapp logo">
+                    </a>
+                    <a href="https://www.linkedin.com/home/?originalSubdomain=in" target="_blank">
+                        <img src="./logos/linkedin.svg" alt="linkedin logo">
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank">
+                        <img src="./logos/twitter.svg" alt="twitter logo">
+                    </a>
+                </h4>
             </div>
-         </div>
-      </div>
-   </section>
+
+        </div>
+    </footer>
 </body>
 
 </html>
