profile image path updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>Hello there!</h2>
                 <h1>I am <span style="color:#6C63FF">Portfolio</span>.</h1>
             </div>
-            <img height="300px" src="/profile.svg" alt="">
+            <img height="300px" src="./profile.svg" alt="">
         </div>
     </section>
 
