--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
     <section id="about">
         <div class="container">
             <h2>About me</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque atque, veritatis aliquam rem voluptates
-                possimus voluptatum ad beatae deleniti libero, excepturi odit necessitatibus exercitationem ratione
-                nihil
-                doloremque nam dolor assumenda explicabo hic quisquam fuga sint unde et! Optio, modi tempora.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque atque, veritatis aliquam rem voluptates possimus voluptatum ad beatae deleniti libero, excepturi odit necessitatibus exercitationem ratione nihil doloremque nam dolor assumenda
+                explicabo hic quisquam fuga sint unde et! Optio, modi tempora.</p>
         </div>
     </section>
 
@@ -51,8 +49,7 @@
             <div id="project-grid">
 
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1553272725-086100aecf5e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80"
-                        alt="">
+                    <img src="https://images.unsplash.com/photo-1553272725-086100aecf5e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80" alt="">
                     <h2>Project Name</h2>
                     <p>
                         <small>
@@ -60,15 +57,12 @@
                             | HTML, CSS, JS</small>
                     </p>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                        numquam blanditiis harum
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum
                     </p>
                 </div>
 
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1627421367074-0735f6ddc254?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=676&q=80"
-                        alt="">
+                    <img src="https://images.unsplash.com/photo-1627421367074-0735f6ddc254?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=676&q=80" alt="">
                     <h3>Project Name</h3>
                     <p>
                         <small>
@@ -76,15 +70,12 @@
                             | HTML, CSS, JS</small>
                     </p>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                        numquam blanditiis harum
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum
                     </p>
                 </div>
 
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1627631498315-3116f6484188?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-                        alt="">
+                    <img src="https://images.unsplash.com/photo-1627631498315-3116f6484188?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="">
                     <h3>Project Name</h3>
                     <p>
                         <small>
@@ -92,15 +83,12 @@
                             | HTML, CSS, JS</small>
                     </p>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                        numquam blanditiis harum
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum
                     </p>
                 </div>
 
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1627590660763-d612beeb85ec?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-                        alt="">
+                    <img src="https://images.unsplash.com/photo-1627590660763-d612beeb85ec?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="">
                     <h3>Project Name</h3>
                     <p>
                         <small>
@@ -108,15 +96,12 @@
                             | HTML, CSS, JS</small>
                     </p>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                        numquam blanditiis harum
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum
                     </p>
                 </div>
 
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1627623725066-b9e645f88d69?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-                        alt="">
+                    <img src="https://images.unsplash.com/photo-1627623725066-b9e645f88d69?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="">
                     <h3>Project Name</h3>
                     <p>
                         <small>
@@ -124,9 +109,7 @@
                             | HTML, CSS, JS</small>
                     </p>
                     <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                        numquam blanditiis harum
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum
                     </p>
                 </div>
             </div>
@@ -141,9 +124,7 @@
                     About me
                 </h2>
                 <h4 class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum
                 </h4>
             </div>
 
@@ -173,6 +154,12 @@
                         <img src="./logos/twitter.svg" alt="twitter logo">
                     </a>
                 </h4>
+            </div>
+            <div class="content-wrapper">
+                <div class="content">
+                    <span class="copyright_text">Copyright © 2021 <a href="#">Portfolio Pandey.</a></span>
+                    <span class="policy_terms"> code with ❤️ </span>
+                </div>
             </div>
 
         </div>
